fix scrolling not happening when collapsing sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@
 .editingFull {
   position: absolute !important;
   left: 0px !important;
-  width: calc(100vw - 4px) !important;
+  /* width: calc(100vw - 4px) !important; */
 
   transition: all 0.5s ease;
 }
